# scs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: ci.yml
app/: CMakeLists.txt  scs.cpp
app/programs/: equality.h  fluent.h  programs.h  ship_domain.h
app/programs/Example/: common.h  example.h  recipe.h  resource_1.h  resource_2.h  resource_3.h  resource_4.h  resource_5.h
app/programs/General/: equality.h  fluent.h  lexer.h  ship_domain.h  tokens.h
app/programs/Hinge/: topology.h
app/programs/Ship/: recipe.h  resource_1.h  ship.h
bench/: CMakeLists.txt  memory_manager.h
bench/Combinatorics/Actions/: instantiations.cpp
bench/Combinatorics/CartesianProduct/: product.cpp
bench/FirstOrderLogic/: equality.cpp
bench/SituationCalculus/: compound_action.cpp
bench/Synthesis/Hinge/: controller.cpp  controller_extended.cpp  controller_full.cpp  controller_full_limits.cpp  controller_quick.cpp  controller_quick_spa.cpp  controller_spa.cpp  expansion.cpp  topology.cpp
bench/Synthesis/Hinge/Other/: controller_extended.cpp  topology.cpp
bench/Synthesis/Hinge/Paper/: controller_full.cpp  controller_quick.cpp  expansion.cpp  limits.cpp  limits_2.cpp  limits_3.cpp  scale.cpp
bench/Synthesis/actions/: instantiations.cpp
docs/: Do.md  (+6 more)
examples/: CMakeLists.txt  execution_type.h
examples/Hinge/: common.h  hinge.h  recipe.h  resource_1.h  resource_2.h  resource_3.h  resource_4.h  run.cpp  run.h  template.h
examples/Hinge/Extended/: recipe.h  run.cpp  run.h
examples/Hinge/ExtendedGrounded/: recipe.h  resource_1.h  resource_2.h  resource_3.h  resource_4.h  resource_x.h  run.cpp  run.h
examples/Hinge/Full/: recipe.h  run.cpp  run.h
examples/Hinge/Quick/: recipe.h  run.cpp  run.h
examples/HingeQuick/: recipe.h  run.cpp  run.h
src/scs/: CMakeLists.txt
src/scs/Combinatorics/Actions/: instantiations.cpp  instantiations.h  permutation.h
src/scs/Combinatorics/CartesianProduct/: product.h
src/scs/Combinatorics/Utils/: contains.h  duplicates.h
src/scs/Common/: directory.cpp  directory.h  io.cpp  io.h  log.h  pch.h  print.h  strings.cpp  strings.h  timer.cpp  timer.h  uuid.cpp  uuid.h  windows.cpp  windows.h
src/scs/ConGolog/: execution.h  resource.h  trace.h
src/scs/ConGolog/CharacteristicGraph/: characteristic_graph.cpp  characteristic_graph.h  export.h  parse.h  state.h  state_tracker.h  transition.h
src/scs/ConGolog/CharacteristicGraph/utils/: counter.h  meta.h  tracker.h  utils.h
src/scs/ConGolog/Parser/: fol.cpp  fol.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h  utf8.cpp  utf8.h
src/scs/ConGolog/Program/: action.h  branch.h  check.h  configuration.cpp  configuration.h  if.h  interface_program.h  interleaved.h  iteration.h  loop.h  nil.h  pick.h  program_counter.h  programs.h  sequence.h  simultaneous.h  while.h
src/scs/FirstOrderLogic/: assignment.h  binary.h  coop_pred.h  domain.h  evaluator.h  fol.h  formula.h  forward.h  object.cpp  object.h  operators.h  predicate.h  printer.h  quantifier.h  route_pred.h  symbols.h  term.h  unary.h  variable.h
src/scs/Memory/: box.h  tracker.h
src/scs/SituationCalculus/: action.cpp  action.h  action_state.h  action_type.cpp  action_type.h  bat.h  compound_action.cpp  compound_action.h  coop_matrix.h  functional_fluent.h  initial_situation.cpp  initial_situation.h  poss.cpp  poss.h  poss_mappings.cpp  poss_mappings.h  poss_transfer.h  poss_union.h  poss_union_default.cpp  poss_union_default.h  relational_fluent.cpp  relational_fluent.h  routes_matrix.h  situation.cpp  situation.h  situation_calculus.h  successor.cpp  successor.h  successor_extractor.h  transfer.h  utils.cpp  utils.h
src/scs/SituationCalculus/Parser/: parser.cpp  parser.h
src/scs/Synthesis/: all_actions.cpp  all_actions.h  export.h  global_bat.cpp  global_bat.h  plan.h  pre_expand.h  recipe_state.h  recipe_transition.h  recipe_visitor.h  synthesis.h  unify.h  valuation.h
src/scs/Synthesis/Actions/: cache.cpp  cache.h  pre_expand.cpp  pre_expand.h  unify.cpp
src/scs/Synthesis/Evolution/: evolution.h
src/scs/Synthesis/Game/: turn.cpp  turn.h
src/scs/Synthesis/Plan/: export.h  plan.h  plan_state.h  plan_transition.h
src/scs/Synthesis/Solvers/: cache.cpp  cache.h
src/scs/Synthesis/Solvers/AStar/: a_star.h  best.h  candidate.h  limits.h  valuation.h
src/scs/Synthesis/Solvers/Core/: cache.cpp  cache.h  candidate.h  core.cpp  core.h  stage.cpp  stage.h  utils.cpp  utils.h
src/scs/Synthesis/Topology/: core.h  export.h  interface_topology.h  out.h  parse.h  topology.h  types.h
src/scs/Synthesis/actions/: cache.cpp  cache.h  instantiations.cpp  instantiations.h  pre_expand.cpp  pre_expand.h  unify.cpp  unify.h
src/scs/Synthesis/topology/: core.h  evolution.h  export.h  interface_topology.h  out.h  topology.h  types.h
src/scs/Synthesis/traces/: traces.cpp  traces.h
tests/: CMakeLists.txt
tests/Combinatorics/: action_instantiations.cpp  cartesian_product.cpp
tests/Common/: io.cpp  strings.cpp
tests/Common/Data/: unicode.txt
tests/ConGolog/CharacteristicGraph/: hinge.cpp
tests/ConGolog/Parser/: fol.cpp  lexer.cpp  token.cpp
tests/ConGolog/Parser/Example/: recipe.cpp  resource_1.cpp  resource_2.cpp  resource_3.cpp  resource_4.cpp  resource_5.cpp
tests/ConGolog/Parser/Ship/: recipe.cpp  resource_1.cpp
tests/FirstOrderLogic/: binary.cpp  bool.cpp  coop.cpp  equality.cpp  object.cpp  predicate.cpp  printer.cpp  quantifier.cpp  unary.cpp
tests/SituationCalculus/: bat.cpp  coop_matrix.cpp  initial_situation.cpp  parser.cpp  relational_fluent.cpp  situation.cpp  successor.cpp
tests/SituationCalculus/Domains/Blocks/: poss.cpp
tests/SituationCalculus/Domains/Database/: simple_ssa.cpp
tests/SituationCalculus/Domains/Ship/: bounded_ssa.cpp  poss.cpp  ssa.cpp
tests/SituationCalculus/Examples/Hinge/: poss.cpp
tests/Synthesis/: action_instantiations.cpp
tests/Synthesis/Actions/: cache.cpp
tests/Synthesis/Examples/Hinge/: poss.cpp  recipe.cpp  synthesis.cpp
tests/Synthesis/Examples/HingeQuick/: controller.cpp
tests/Synthesis/Topology/: shuffle_transitions.cpp
(+46 files in other folders)
